feat: complete VinTony POS features